[package]
name = "e"
readme = "README.md"
version = "0.0.0"
edition = "2021"
authors = ["纳西妲 · Nahida <yanwenz551@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/SR-MyStar/e"
description = "A Rust Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
