[package]
name = "e"
readme = "README.md"
version = "0.2.1"
edition = "2021"
authors = ["纳西妲 · Nahida <yanwenz551@gmail.com>"]
exclude = ["/target", "/Cargo.lock"]
license = "MPL-2.0"
keywords = ["util", "macro"]
repository = "https://github.com/SR-MyStar/e"
description = "Provide some utility tools"

[workspace]
members = ["e_macro"]

[features]
default = ["macros"]
macros = []

[dependencies.e_macro]
path = "e_macro"
version = "0.2"
