[package]
name = "e_macro"
readme = "README.md"
version = "0.1.0"
edition = "2021"
authors = ["纳西妲 · Nahida <yanwenz551@gmail.com>"]
license = "GPL-3.0-or-later"
keywords = ["macro", "macros"]
repository = "https://github.com/SR-MyStar/e"
description = "A module for e library, it provides some utility macros for Rust"

[lib]
proc-macro = true

[dependencies.quote]
version = "1.0.35"

[dependencies.syn]
version = "2.0.48"
features = ["full", "fold"]
