[package]
name = "e_macro"
readme = "README.md"
version = "0.2.1"
edition = "2021"
authors = ["纳西妲 · Nahida <yanwenz551@gmail.com>"]
license = "MPL-2.0"
keywords = ["macro", "macros"]
repository = "https://github.com/SR-MyStar/e"
description = "A module for e library, it provides some utility macros for Rust"
